--- a/index.html
+++ b/index.html
@@ -405,8 +405,7 @@
                   <p class="mb-4">
                     It is challenging for healthcare professionals to communicate with Deaf patients,
                     especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
-                    clinics, and face masks make lipreading impossible.
-
+                    clinics, and face masks make lipreading impossible.<br>
                     We present an application which allows healthcare professionals to translate sentences
                     that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign
                     Language of the Netherlands (NGT). Translations are displayed by means of videos and
@@ -443,7 +442,7 @@
                     family of hearing parents, it is vital that the parents communicate with the child through sign
                     language as soon as possible, otherwise the language region of that child's brain will be
                     underdeveloped. There are currently few resources available for people to learn Sign Language
-                    of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it. </b>
+                    of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it. <br>
                     This thesis investigates what components are necessary to build a system that uses an avatar to
                     translate a Dutch sentence to NGT. On the basis of the workings of NGT and previous research on
                     the matter, three main components are devised and implemented: software for sign language synthesis,
@@ -462,7 +461,7 @@
                     Hearing parents who have deaf children are often put in a difficult position.
                     They most likely know no sign language and resources for learning are limited and expensive.
                     Research into sign language translation and synthesis has increased in the past two decades,
-                    due to a growing interest into making public spaces and services more accessible to Deaf people.</b>
+                    due to a growing interest into making public spaces and services more accessible to Deaf people.<br>
                     This research looks at the potential of a translator from Dutch to Dutch sign language (NGT)
                     using a sign language avatar. In particular the focus lies on the synthesis of directional verbs,
                     a critical grammatical component of sign language. The implementation is very limited and therefore
