--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 </section>
 
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50 fixed-bottom"><div class="container">&copy;2020 SignLab Amsterdam <br><i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
+<footer class="footer bg-white small text-center text-black-50 position-sticky"><div class="container">&copy;2020 SignLab Amsterdam <br><i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
 
 
 <!-- Javascripts -->
