--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <!-- About -->
 <section class="projects-section bg-light fadeIn" id="About">
-    <div class="container-fluid">
+    <div class="container-fluid flex-fill">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
@@ -137,7 +137,7 @@
 <!-- Translate -->
 
 <section class="projects-section bg-light fadeIn undisplayed" id="Translate">
-    <div class="container-fluid" style="width: 100%;">
+    <div class="container-fluid flex-fill" style="width: 100%;">
       <div id="alertMainTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -319,7 +319,7 @@
 <!-- Project info section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="People">
 
-    <div class="container-fluid">
+    <div class="container-fluid flex-fill">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
@@ -398,7 +398,7 @@
 <!-- Publications section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Publications">
 
-      <div class="container-fluid">
+      <div class="container-fluid flex-fill">
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                   <h4><a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a></h4>
@@ -646,7 +646,7 @@
 
 <!-- Projects -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Projects">
-    <div class="container-fluid">
+    <div class="container-fluid flex-fill">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
             <!-- <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding"> -->
@@ -663,7 +663,7 @@
 </section>
 
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50 position-sticky"><div class="container">&copy;2020 SignLab Amsterdam <br><i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
+<footer class="footer bg-white small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
 
 
 <!-- Javascripts -->
