--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
 <body id="page-top" onload="CWASA.init();">
 
-
+<div id="page-container">
+<div id="content-wrap">
 <!--================================================================-->
 
 
@@ -662,6 +663,7 @@
     </div>
 </section>
 
+</div>
 <!-- Footer-->
 <footer class="footer bg-white small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
 
@@ -712,6 +714,6 @@
   var vidPath;
   var varPath;
 </script>
-
+</div>
 </body>
 </html>
