sigmls, download knop

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
       <div class="container-fluid">
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
-                  <h4><a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a></h4>
+                  <h4>i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a></h4>
                   <p class="mb-4">
                     It is challenging for healthcare professionals to communicate with Deaf patients,
                     especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
@@ -418,7 +418,7 @@
                   <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                  <h4><a href="publications/Corsel.pdf" download="Corsel">Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands</a></h4>
+                  <h4>i class="material-icons">download</i><a href="publications/Corsel.pdf" download="Corsel">Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands</a></h4>
                   <p class="mb-4">
                     This paper explores the implementation of a translator to sign language, using the JASigning avatarsoftware.
                     Specifically, translation of Dutch into Sign Language of the Netherlands (NGT).
@@ -435,7 +435,7 @@
                   <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                  <h4><a href="publications/Esselink.pdf" download="Esselink">Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands</a></h4>
+                  <h4>i class="material-icons">download</i><a href="publications/Esselink.pdf" download="Esselink">Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands</a></h4>
                   <p class="mb-4">
                     Deaf people oftentimes have no choice but to communicate in the lingua franca of their country,
                     despite the fact that this is a second language for them. Their ability to read and write is
@@ -457,7 +457,7 @@
                   <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                  <h5><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">The signing space for the synthesis of directional verbs in NGT</a></h4>
+                  <h5><i class="material-icons">download</i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">The signing space for the synthesis of directional verbs in NGT</a></h4>
                   <p class="mb-4">
                     Hearing parents who have deaf children are often put in a difficult position.
                     They most likely know no sign language and resources for learning are limited and expensive.
