--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                           Organisation for Innovation in Healthcare (ZonMw) through the
                     <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
                           <br>
-                          <a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a>
+                          <i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a>
                         </div>
                       </div>
                     </div>
@@ -461,7 +461,7 @@
                     </div>
                   </div>
 
-                  <h4>i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a></h4>
+                  <h4><i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a></h4>
                   <p class="mb-4">
                     It is challenging for healthcare professionals to communicate with Deaf patients,
                     especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
