--- a/index.html
+++ b/index.html
@@ -411,7 +411,11 @@
                             Sign Language Translation in a Healthcare Setting
                           </button>
                         </h4>
-                        <h6>Manuscript submitted for publication</h6>
+                        <p class="mb-4">
+                          <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
+                          <b>Year:</b> 2021
+                          <b>Type:</b> Manuscript submitted for publication
+                        </p>
                       </div>
 
                       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
@@ -426,8 +430,8 @@
                           extended to other sign languages. We gratefully acknowledge funding from the Netherlands
                           Organisation for Innovation in Healthcare (ZonMw) through the
                     <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
-                          <br>
-                          <i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a>
+                          <br><br>
+                          <i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19"> Download paper</a>
                         </div>
                       </div>
                     </div>
