--- a/index.html
+++ b/index.html
@@ -402,7 +402,6 @@
       <div class="container-fluid">
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
-
                   <div id="accordion">
                     <div class="card">
                       <div class="card-header" id="headingOne">
@@ -413,11 +412,10 @@
                         </h4>
                         <p class="mb-4">
                           <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
-                          <b>Year:</b> 2021
+                          <b>Year:</b> 2021 <br>
                           <b>Type:</b> Manuscript submitted for publication
                         </p>
                       </div>
-
                       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="card-body">
                           It is challenging for healthcare professionals to communicate with Deaf patients,
@@ -437,102 +435,101 @@
                     </div>
                     <div class="card">
                       <div class="card-header" id="headingTwo">
-                        <h5 class="mb-0">
+                        <h4 class="mb-0">
                           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Collapsible Group Item #2
+                            Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands
                           </button>
-                        </h5>
+                        </h4>
+                        <p class="mb-4">
+                          <b>Authors:</b> A.J. Corsel <br>
+                          <b>Year:</b> 2020 <br>
+                          <b>Type:</b> Bachelor thesis
+                        </p>
                       </div>
                       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                         <div class="card-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                          This paper explores the implementation of a translator to sign language, using the JASigning avatarsoftware.
+                          Specifically, translation of Dutch into Sign Language of the Netherlands (NGT).
+                          As Dutch has been translated to a textual version of NGT in previous research, this research translated
+                          from textual NGT to synthesised NGT, the output signed by an avatar.
+                          This is one of three papers, each focusing on a different aspect of the translator: Lexical Resources,
+                          the Signing Space, and Multidimensionality. This paper pertains to the latter, and thus attempts to
+                          implement multiple dimensions into the avatar: the manual and non-manual component, which are both necessary
+                          to properly articulate a sign. The non-manual component of a sign being, for example, a facial expression,
+                          a head shake, the posture ofthe signer, etc. Specifically, it attempts to implement the non-manual markers
+                          paired with interrogative and negative constructs in NGT. Although the scope of this project is limited,
+                          it could provide a decent foundation for further research.
+                          <br><br>
+                          <i class="material-icons">download</i><a href="publications/Corsel.pdf" download="Corsel">Download paper</a>
                         </div>
                       </div>
                     </div>
                     <div class="card">
                       <div class="card-header" id="headingThree">
-                        <h5 class="mb-0">
+                        <h4 class="mb-0">
                           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Collapsible Group Item #3
+                            The signing space for the synthesis of directional verbs in NGT
                           </button>
-                        </h5>
+                        </h4>
+                        <p class="mb-4">
+                          <b>Authors:</b> S.M. Mede-Gillings <br>
+                          <b>Year:</b> 2020 <br>
+                          <b>Type:</b> Bachelor thesis
+                        </p>
                       </div>
                       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                         <div class="card-body">
-                          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                          Hearing parents who have deaf children are often put in a difficult position.
+                          They most likely know no sign language and resources for learning are limited and expensive.
+                          Research into sign language translation and synthesis has increased in the past two decades,
+                          due to a growing interest into making public spaces and services more accessible to Deaf people.<br>
+                          This research looks at the potential of a translator from Dutch to Dutch sign language (NGT)
+                          using a sign language avatar. In particular the focus lies on the synthesis of directional verbs,
+                          a critical grammatical component of sign language. The implementation is very limited and therefore
+                          the sentences it produces are not always comprehensible and the signs do not always look natural.
+                          It does, however, also demonstrate the potential of a sign language avatar as a tool for learning sign language.
+                          <br><br>
+                          <i class="material-icons">download</i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <div class="card-header" id="headingFour">
+                        <h4 class="mb-0">
+                          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands
+                          </button>
+                        </h4>
+                        <p class="mb-4">
+                          <b>Authors:</b> L.D. Esselink <br>
+                          <b>Year:</b> 2020 <br>
+                          <b>Type:</b> Bachelor thesis
+                        </p>
+                      </div>
+                      <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                        <div class="card-body">
+                          Deaf people oftentimes have no choice but to communicate in the lingua franca of their country,
+                          despite the fact that this is a second language for them. Their ability to read and write is
+                          significantly worse than that of a hearing person. Additionally, if a deaf child is born into a
+                          family of hearing parents, it is vital that the parents communicate with the child through sign
+                          language as soon as possible, otherwise the language region of that child's brain will be
+                          underdeveloped. There are currently few resources available for people to learn Sign Language
+                          of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it. <br>
+                          This thesis investigates what components are necessary to build a system that uses an avatar to
+                          translate a Dutch sentence to NGT. On the basis of the workings of NGT and previous research on
+                          the matter, three main components are devised and implemented: software for sign language synthesis,
+                          lexical resources for encoding signs, and grammatical resources for structuring sentences.
+                          Results show a proof of concept with a corpus of 2226 signs, the ability to make correct use of
+                          classifiers, and the abilities to fingerspell any word that is not in the corpus and convey numbers
+                          correctly. However, the corpus contains a number of errors and of which manual errors and unnatural
+                          mouth signs should particularly be improved. Moreover, further research is necessary to improve the
+                          comprehensibility of signs.
+                          <br><br>
+                          <i class="material-icons">download</i><a href="publications/Esselink.pdf" download="Esselink">Download paper</a>
                         </div>
                       </div>
                     </div>
                   </div>
-
-                  <h4><i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a></h4>
-                  <p class="mb-4">
-                    It is challenging for healthcare professionals to communicate with Deaf patients,
-                    especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
-                    clinics, and face masks make lipreading impossible.<br>
-                    We present an application which allows healthcare professionals to translate sentences
-                    that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign
-                    Language of the Netherlands (NGT). Translations are displayed by means of videos and
-                    avatar animations. The architecture of the system is such that it could be straightforwardly
-                    extended to other sign languages. We gratefully acknowledge funding from the Netherlands
-                    Organisation for Innovation in Healthcare (ZonMw) through the
-              <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
-                  </p>
-                  <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
-                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                  <h4>i class="material-icons">download</i><a href="publications/Corsel.pdf" download="Corsel">Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands</a></h4>
-                  <p class="mb-4">
-                    This paper explores the implementation of a translator to sign language, using the JASigning avatarsoftware.
-                    Specifically, translation of Dutch into Sign Language of the Netherlands (NGT).
-                    As Dutch has been translated to a textual version of NGT in previous research, this research translated
-                    from textual NGT to synthesised NGT, the output signed by an avatar.
-                    This is one of three papers, each focusing on a different aspect of the translator: Lexical Resources,
-                    the Signing Space, and Multidimensionality. This paper pertains to the latter, and thus attempts to
-                    implement multiple dimensions into the avatar: the manual and non-manual component, which are both necessary
-                    to properly articulate a sign. The non-manual component of a sign being, for example, a facial expression,
-                    a head shake, the posture ofthe signer, etc. Specifically, it attempts to implement the non-manual markers
-                    paired with interrogative and negative constructs in NGT. Although the scope of this project is limited,
-                    it could provide a decent foundation for further research.
-                  </p>
-                  <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
-                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                  <h4>i class="material-icons">download</i><a href="publications/Esselink.pdf" download="Esselink">Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands</a></h4>
-                  <p class="mb-4">
-                    Deaf people oftentimes have no choice but to communicate in the lingua franca of their country,
-                    despite the fact that this is a second language for them. Their ability to read and write is
-                    significantly worse than that of a hearing person. Additionally, if a deaf child is born into a
-                    family of hearing parents, it is vital that the parents communicate with the child through sign
-                    language as soon as possible, otherwise the language region of that child's brain will be
-                    underdeveloped. There are currently few resources available for people to learn Sign Language
-                    of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it. <br>
-                    This thesis investigates what components are necessary to build a system that uses an avatar to
-                    translate a Dutch sentence to NGT. On the basis of the workings of NGT and previous research on
-                    the matter, three main components are devised and implemented: software for sign language synthesis,
-                    lexical resources for encoding signs, and grammatical resources for structuring sentences.
-                    Results show a proof of concept with a corpus of 2226 signs, the ability to make correct use of
-                    classifiers, and the abilities to fingerspell any word that is not in the corpus and convey numbers
-                    correctly. However, the corpus contains a number of errors and of which manual errors and unnatural
-                    mouth signs should particularly be improved. Moreover, further research is necessary to improve the
-                    comprehensibility of signs.
-                  </p>
-                  <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
-                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                  <h5><i class="material-icons">download</i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">The signing space for the synthesis of directional verbs in NGT</a></h4>
-                  <p class="mb-4">
-                    Hearing parents who have deaf children are often put in a difficult position.
-                    They most likely know no sign language and resources for learning are limited and expensive.
-                    Research into sign language translation and synthesis has increased in the past two decades,
-                    due to a growing interest into making public spaces and services more accessible to Deaf people.<br>
-                    This research looks at the potential of a translator from Dutch to Dutch sign language (NGT)
-                    using a sign language avatar. In particular the focus lies on the synthesis of directional verbs,
-                    a critical grammatical component of sign language. The implementation is very limited and therefore
-                    the sentences it produces are not always comprehensible and the signs do not always look natural.
-                    It does, however, also demonstrate the potential of a sign language avatar as a tool for learning sign language.
-                  </p>
-                  <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
             </div>
       </div>
