--- a/index.html
+++ b/index.html
@@ -412,9 +412,10 @@
                         </h4>
                         <p class="mb-4">
                           <br>
-                          <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                           <b>Year:</b> 2021 <br>
-                          <b>Type:</b> Manuscript submitted for publication
+                          <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
+                          <b>Type:</b> Manuscript submitted for publication <br>
+                          <i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19"> Download paper</a>
                         </p>
                       </div>
                       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
@@ -429,8 +430,6 @@
                           extended to other sign languages. We gratefully acknowledge funding from the Netherlands
                           Organisation for Innovation in Healthcare (ZonMw) through the
                     <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
-                          <br><br>
-                          <i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19"> Download paper</a>
                         </div>
                       </div>
                     </div>
@@ -443,9 +442,10 @@
                         </h4>
                         <p class="mb-4">
                           <br>
-                          <b>Authors:</b> A.J. Corsel <br>
                           <b>Year:</b> 2020 <br>
-                          <b>Type:</b> Bachelor thesis
+                          <b>Author:</b> A.J. Corsel <br>
+                          <b>Type:</b> Bachelor thesis <br>
+                          <i class="material-icons">download</i><a href="publications/Corsel.pdf" download="Corsel">Download paper</a>
                         </p>
                       </div>
                       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
@@ -461,8 +461,6 @@
                           a head shake, the posture ofthe signer, etc. Specifically, it attempts to implement the non-manual markers
                           paired with interrogative and negative constructs in NGT. Although the scope of this project is limited,
                           it could provide a decent foundation for further research.
-                          <br><br>
-                          <i class="material-icons">download</i><a href="publications/Corsel.pdf" download="Corsel">Download paper</a>
                         </div>
                       </div>
                     </div>
@@ -475,9 +473,10 @@
                         </h4>
                         <p class="mb-4">
                           <br>
-                          <b>Authors:</b> S.M. Mede-Gillings <br>
                           <b>Year:</b> 2020 <br>
-                          <b>Type:</b> Bachelor thesis
+                          <b>Author:</b> S.M. Mede-Gillings <br>
+                          <b>Type:</b> Bachelor thesis <br>
+                          <i class="material-icons">download</i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper</a>
                         </p>
                       </div>
                       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
@@ -491,8 +490,6 @@
                           a critical grammatical component of sign language. The implementation is very limited and therefore
                           the sentences it produces are not always comprehensible and the signs do not always look natural.
                           It does, however, also demonstrate the potential of a sign language avatar as a tool for learning sign language.
-                          <br><br>
-                          <i class="material-icons">download</i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper</a>
                         </div>
                       </div>
                     </div>
@@ -505,9 +502,10 @@
                         </h4>
                         <p class="mb-4">
                           <br>
-                          <b>Authors:</b> L.D. Esselink <br>
                           <b>Year:</b> 2020 <br>
-                          <b>Type:</b> Bachelor thesis
+                          <b>Author:</b> L.D. Esselink <br>
+                          <b>Type:</b> Bachelor thesis <br>
+                          <i class="material-icons">download</i><a href="publications/Esselink.pdf" download="Esselink">Download paper</a>
                         </p>
                       </div>
                       <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
@@ -528,8 +526,6 @@
                           correctly. However, the corpus contains a number of errors and of which manual errors and unnatural
                           mouth signs should particularly be improved. Moreover, further research is necessary to improve the
                           comprehensibility of signs.
-                          <br><br>
-                          <i class="material-icons">download</i><a href="publications/Esselink.pdf" download="Esselink">Download paper</a>
                         </div>
                       </div>
                     </div>
