mooier? css ook

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                 <b>Year:</b> 2021 <br>
                 <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                 <b>Type:</b> Manuscript submitted for publication <br>
-                <a href="#collapseOne" data-toggle="collapse">Abstract <i class="material-icons">arrow_drop_down</i></a>
+                <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a>
               </p>
               <div id="collapseOne" class="collapse">
             <p class="mb-4">
@@ -561,6 +561,7 @@
               Organisation for Innovation in Healthcare (ZonMw) through the
         <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
             </p>
+            </div>
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -571,7 +572,7 @@
                 <b>Year:</b> 2020 <br>
                 <b>Author:</b> S.M. Mede-Gillings <br>
                 <b>Type:</b> Bachelor thesis <br>
-                <a href="#collapseTwo" data-toggle="collapse">Abstract <i class="material-icons">arrow_drop_down</i></a>
+                <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a>
               </p>
               <div id="collapseTwo" class="collapse">
             <p class="mb-4">
@@ -598,7 +599,7 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> S.M. Mede-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="#collapseThree" data-toggle="collapse">Abstract <i class="material-icons">arrow_drop_down</i></a>
+              <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a>
             </p>
             <div id="collapseThree" class="collapse">
             <p class="mb-4">
@@ -630,7 +631,7 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> S.M. Mede-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="#collapseFour" data-toggle="collapse">Abstract <i class="material-icons">arrow_drop_down</i></a>
+              <a href="#collapseFour" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a>
             </p>
             <div id="collapseFour" class="collapse">
             <p class="mb-4">
