--- a/index.html
+++ b/index.html
@@ -541,12 +541,11 @@
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
             <h4>Sign Language Translation in a Healthcare Setting</h4>
               <p class="mb-4">
-                <br>
-                <i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19">Download paper</a> <br>
                 <b>Year:</b> 2021 <br>
                 <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                 <b>Type:</b> Manuscript submitted for publication <br>
-                <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a>
+                <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a><br>
+                <i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19">Download paper</a>
               </p>
               <div id="collapseOne" class="collapse">
             <p class="mb-4">
@@ -567,12 +566,11 @@
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
             <h4>Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands</h4>
               <p class="mb-4">
-                <br>
-                <i class="material-icons">download</i><a href="publications/Corsel.pdf" download="Corsel">Download paper</a> <br>
                 <b>Year:</b> 2020 <br>
-                <b>Author:</b> S.M. Mede-Gillings <br>
+                <b>Author:</b> A.J. Corsel <br>
                 <b>Type:</b> Bachelor thesis <br>
-                <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a>
+                <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a> <br>
+                <i class="material-icons">download</i><a href="publications/Corsel.pdf" download="Corsel">Download paper</a>
               </p>
               <div id="collapseTwo" class="collapse">
             <p class="mb-4">
@@ -594,12 +592,11 @@
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
             <h4>Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands</h4>
             <p class="mb-4">
-              <br>
-              <i class="material-icons">download</i><a href="publications/Esselink.pdf" download="Esselink">Download paper</a> <br>
               <b>Year:</b> 2020 <br>
-              <b>Author:</b> S.M. Mede-Gillings <br>
+              <b>Author:</b> L.D. Esselink <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a>
+              <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a> <br>
+              <i class="material-icons">download</i><a href="publications/Esselink.pdf" download="Esselink">Download paper</a>
             </p>
             <div id="collapseThree" class="collapse">
             <p class="mb-4">
@@ -626,12 +623,11 @@
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
             <h4>The signing space for the synthesis of directional verbs in NGT</h4>
             <p class="mb-4">
-              <br>
-              <i class="material-icons">download</i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper</a> <br>
               <b>Year:</b> 2020 <br>
               <b>Author:</b> S.M. Mede-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="#collapseFour" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a>
+              <a href="#collapseFour" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">Abstract <i class="material-icons expand_more">expand_more</i><i class="material-icons expand_less">expand_less</i></a> <br>
+              <i class="material-icons">download</i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper</a>
             </p>
             <div id="collapseFour" class="collapse">
             <p class="mb-4">
