--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@
                 <b>Year:</b> 2021 <br>
                 <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                 <b>Type:</b> Manuscript submitted for publication <br>
-                <i class="material-icons">download</i><a href="publications/COVID-19.pdf" download="COVID-19">Download paper</a> <br>
-                <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="fa fa-chevron-right pull-right"></i></a>
+                <i class="bi bi-download"></i><a href="publications/COVID-19.pdf" download="COVID-19">Download paper</a>
+                <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="bi bi-chevron-down"></i></i></a>
               </p>
               <div id="collapseOne" class="collapse">
             <p class="mb-4">
@@ -569,8 +569,8 @@
                 <b>Year:</b> 2020 <br>
                 <b>Author:</b> A.J. Corsel <br>
                 <b>Type:</b> Bachelor thesis <br>
-                <i class="material-icons">download</i><a href="publications/Corsel.pdf" download="Corsel">Download paper</a> <br>
-                <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="fa fa-chevron-right pull-right"></i></a>
+                <i class="bi bi-download"></i><a href="publications/Corsel.pdf" download="Corsel">Download paper</a> <br>
+                <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="bi bi-chevron-down"></i></a>
               </p>
               <div id="collapseTwo" class="collapse">
             <p class="mb-4">
@@ -595,8 +595,8 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> L.D. Esselink <br>
               <b>Type:</b> Bachelor thesis <br>
-              <i class="material-icons">download</i><a href="publications/Esselink.pdf" download="Esselink">Download paper</a> <br>
-              <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="fa fa-chevron-right pull-right"></i></a>
+              <i class="bi bi-download"></i><a href="publications/Esselink.pdf" download="Esselink">Download paper</a> <br>
+              <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="bi bi-chevron-down"></i></i></a>
             </p>
             <div id="collapseThree" class="collapse">
             <p class="mb-4">
@@ -626,8 +626,8 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> S.M. Mede-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
-              <i class="material-icons">download</i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper</a> <br>
-              <a href="#collapseFour" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">Abstract <i class="fa fa-chevron-right pull-right"></i></a>
+              <i class="bi bi-download"></i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper</a> <br>
+              <a href="#collapseFour" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">Abstract <i class="bi bi-chevron-down"></i></i></a>
             </p>
             <div id="collapseFour" class="collapse">
             <p class="mb-4">
