--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.css">
 <!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
 <link rel="stylesheet" href="css/cwasa-reduced.css">
+<!-- CSS file for bootstrap icons -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 </head>
 
@@ -544,7 +546,7 @@
                 <b>Year:</b> 2021 <br>
                 <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                 <b>Type:</b> Manuscript submitted for publication <br>
-                <i class="bi bi-download"></i><a href="publications/COVID-19.pdf" download="COVID-19">Download paper</a>
+                <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
                 <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="bi bi-chevron-down"></i></i></a>
               </p>
               <div id="collapseOne" class="collapse">
@@ -569,7 +571,7 @@
                 <b>Year:</b> 2020 <br>
                 <b>Author:</b> A.J. Corsel <br>
                 <b>Type:</b> Bachelor thesis <br>
-                <i class="bi bi-download"></i><a href="publications/Corsel.pdf" download="Corsel">Download paper</a> <br>
+                <a href="publications/Corsel.pdf" download="Corsel">Download paper <i class="bi bi-download"></i></a> <br>
                 <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="bi bi-chevron-down"></i></a>
               </p>
               <div id="collapseTwo" class="collapse">
@@ -595,7 +597,7 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> L.D. Esselink <br>
               <b>Type:</b> Bachelor thesis <br>
-              <i class="bi bi-download"></i><a href="publications/Esselink.pdf" download="Esselink">Download paper</a> <br>
+              <a href="publications/Esselink.pdf" download="Esselink">Download paper</a> <i class="bi bi-download"></i><br>
               <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="bi bi-chevron-down"></i></i></a>
             </p>
             <div id="collapseThree" class="collapse">
