--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
 <!-- =============================================== -->
 <!-- CSS files -->
 
@@ -547,7 +547,7 @@
                 <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                 <b>Type:</b> Manuscript submitted for publication <br>
                 <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
-                <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="bi bi-chevron-down"></i></i></a>
+                <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="bi bi-chevron-right"></i></a>
               </p>
               <div id="collapseOne" class="collapse">
             <p class="mb-4">
@@ -571,8 +571,8 @@
                 <b>Year:</b> 2020 <br>
                 <b>Author:</b> A.J. Corsel <br>
                 <b>Type:</b> Bachelor thesis <br>
-                <a href="publications/Corsel.pdf" download="Corsel">Download paper <i class="bi bi-download"></i></a> <br>
-                <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="bi bi-chevron-down"></i></a>
+                <a href="publications/Corsel.pdf" download="Corsel">Download paper <i class="bi bi-download"></i></a>
+                <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="bi bi-chevron-right"></i></a>
               </p>
               <div id="collapseTwo" class="collapse">
             <p class="mb-4">
@@ -597,8 +597,8 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> L.D. Esselink <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="publications/Esselink.pdf" download="Esselink">Download paper</a> <i class="bi bi-download"></i><br>
-              <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="bi bi-chevron-down"></i></i></a>
+              <a href="publications/Esselink.pdf" download="Esselink">Download paper <i class="bi bi-download"></i></a>
+              <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="bi bi-chevron-right"></i></a>
             </p>
             <div id="collapseThree" class="collapse">
             <p class="mb-4">
@@ -628,8 +628,8 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> S.M. Mede-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
-              <i class="bi bi-download"></i><a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper</a> <br>
-              <a href="#collapseFour" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">Abstract <i class="bi bi-chevron-down"></i></i></a>
+              <a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper <i class="bi bi-download"></i></a>
+              <a href="#collapseFour" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">Abstract <i class="bi bi-chevron-right"></i></a>
             </p>
             <div id="collapseFour" class="collapse">
             <p class="mb-4">
@@ -841,7 +841,7 @@
 
 </div>
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
+<footer class="footer bg-white small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</div></footer>
 
 
 <!-- Javascripts -->
