--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
 
 </div>
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</div></footer>
+<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam <br><i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
 
 
 <!-- Javascripts -->
