--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                 <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                 <b>Type:</b> Manuscript submitted for publication <br>
                 <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
-                <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="bi bi-chevron-right"></i></a>
+                <a href="#collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="collapseOne">Abstract <i class="fa fa-chevron-right"></i></a>
               </p>
               <div id="collapseOne" class="collapse">
             <p class="mb-4">
@@ -572,7 +572,7 @@
                 <b>Author:</b> A.J. Corsel <br>
                 <b>Type:</b> Bachelor thesis <br>
                 <a href="publications/Corsel.pdf" download="Corsel">Download paper <i class="bi bi-download"></i></a>
-                <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="bi bi-chevron-right"></i></a>
+                <a href="#collapseTwo" data-toggle="collapse" aria-expanded="false" aria-controls="collapseTwo">Abstract <i class="fa fa-chevron-right"></i></a>
               </p>
               <div id="collapseTwo" class="collapse">
             <p class="mb-4">
@@ -598,7 +598,7 @@
               <b>Author:</b> L.D. Esselink <br>
               <b>Type:</b> Bachelor thesis <br>
               <a href="publications/Esselink.pdf" download="Esselink">Download paper <i class="bi bi-download"></i></a>
-              <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="bi bi-chevron-right"></i></a>
+              <a href="#collapseThree" data-toggle="collapse" aria-expanded="false" aria-controls="collapseThree">Abstract <i class="fa fa-chevron-right"></i></a>
             </p>
             <div id="collapseThree" class="collapse">
             <p class="mb-4">
@@ -629,7 +629,7 @@
               <b>Author:</b> S.M. Mede-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
               <a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper <i class="bi bi-download"></i></a>
-              <a href="#collapseFour" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">Abstract <i class="bi bi-chevron-right"></i></a>
+              <a href="#collapseFour" data-toggle="collapse" aria-expanded="false" aria-controls="collapseFour">Abstract <i class="fa fa-chevron-right"></i></a>
             </p>
             <div id="collapseFour" class="collapse">
             <p class="mb-4">
