--- a/index.html
+++ b/index.html
@@ -541,6 +541,7 @@
 <div class="container-fluid">
   <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
+            <div class="collapseTransform">
             <h4>Sign Language Translation in a Healthcare Setting</h4>
               <p class="mb-4">
                 <b>Year:</b> 2021 <br>
@@ -563,9 +564,11 @@
         <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
             </p>
             </div>
+            </div>
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+            <div class="collapseTransform">
             <h4>Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands</h4>
               <p class="mb-4">
                 <b>Year:</b> 2020 <br>
@@ -589,9 +592,11 @@
               it could provide a decent foundation for further research.
             </p>
           </div>
+          </div>
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+            <div class="collapseTransform">
             <h4>Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands</h4>
             <p class="mb-4">
               <b>Year:</b> 2020 <br>
@@ -620,9 +625,11 @@
               comprehensibility of signs.
             </p>
           </div>
+          </div>
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+            <div class="collapseTransform">
             <h4>The signing space for the synthesis of directional verbs in NGT</h4>
             <p class="mb-4">
               <b>Year:</b> 2020 <br>
@@ -643,6 +650,7 @@
               the sentences it produces are not always comprehensible and the signs do not always look natural.
               It does, however, also demonstrate the potential of a sign language avatar as a tool for learning sign language.
             </p>
+          </div>
           </div>
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
